/**
 * User Model - MongoDB schema for users with Admin/User roles
 */
const mongoose = require('mongoose');
const bcrypt = require('bcryptjs');

const userSchema = new mongoose.Schema({
  name: {
    type: String,
    required: [true, 'Name is required'],
    trim: true,
    minlength: [2, 'Name must be at least 2 characters'],
    maxlength: [50, 'Name must be at most 50 characters'],
  },
  email: {
    type: String,
    required: [true, 'Email is required'],
    unique: true,
    lowercase: true,
    trim: true,
    match: [/^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/, 'Please provide a valid email'],
  },
  password: {
    type: String,
    required: [true, 'Password is required'],
    minlength: [6, 'Password must be at least 6 characters'],
    select: false,
  },
  role: {
    type: String,
    enum: ['user', 'admin'],
    default: 'user',
  },
  isActive: {
    type: Boolean,
    default: true,
  },
  lastLogin: Date,
  passwordChangedAt: Date,
  predictionCount: {
    type: Number,
    default: 0,
  },
  predictionLimit: {
    type: Number,
    default: 100, // Default limit for regular users
  },
}, {
  timestamps: true,
  toJSON: { virtuals: true },
  toObject: { virtuals: true },
});

// Hash password before saving
userSchema.pre('save', async function(next) {
  if (!this.isModified('password')) return next();
  this.password = await bcrypt.hash(this.password, 12);
  if (!this.isNew) this.passwordChangedAt = Date.now() - 1000;
  next();
});

// Method to compare passwords
userSchema.methods.comparePassword = async function(candidatePassword) {
  return await bcrypt.compare(candidatePassword, this.password);
};

// Method to check if user can make predictions
userSchema.methods.canMakePrediction = function() {
  if (this.role === 'admin') return true;
  return this.predictionCount < this.predictionLimit;
};

// Method to get remaining predictions
userSchema.methods.getRemainingPredictions = function() {
  if (this.role === 'admin') return 'unlimited';
  return Math.max(0, this.predictionLimit - this.predictionCount);
};

module.exports = mongoose.model('User', userSchema);
